--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cordova-Create",
+  "name": "cordova-create",
   "description": "A node command for creating a simple Cordova project with a couple of common plugins.",
   "version": "0.1.0",
   "engines": {
